# vcslink

./: .gitignore  .mergify.yml  .travis.yml  Makefile  README.rst  readthedocs.yml  setup.cfg  tox.ini
.github/workflows/: main.yml  publish.yml
ci/test-upload/: tox.ini
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  low-level-api.rst  vcsbrowse.rst
docs/source/_static/: custom.css
opt/: inject-readme.mk
src/vcslink/: __init__.py  api.py  base.py  browse.py  conftest.py  git.py  testing.py  weburl.py
src/vcslink/tests/: test_weburl.py
src/vcslinks/: __init__.py  api.py  base.py  browse.py  conftest.py  git.py  testing.py  weburl.py
src/vcslinks/tests/: test_browse.py  test_py_typed.py  test_weburl.py
