[metadata]
name = vcslinks
version = attr: vcslinks.__version__
# description = vcslinks: THIS DOES WHAT
long_description = file: README.rst
# url = https://github.com/tkf/vcslinks
# project_urls =
#     Tracker=https://github.com/tkf/vcslinks/issues

author = Takafumi Arakaki
author_email = aka.tkf@gmail.com

# SPDX short identifier:
license = MIT
license_file = LICENSE
# keywords =
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    # see: http://pypi.python.org/pypi?%3Aaction=list_classifiers

[options]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#using-a-src-layout
package_dir =
    =src
packages = find:
# zip_safe = False
# install_requires =
#     numpy
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
* =
    py.typed

[options.extras_require]
# Update `ci/test-upload/tox.ini` when "test" is changed:
test =
    pytest

[options.entry_points]
console_scripts =
   vcsbrowse=vcslinks.browse:main

[tool:isort]
known_first_party = vcslinks
default_section = THIRDPARTY

# Black-compatible setting.  See: https://github.com/ambv/black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
